--- a/.github/workflows/mali_build.yml
+++ b/.github/workflows/mali_build.yml
@@ -1,25 +1,21 @@
-name: Mali-G85-Final-Build
+name: Mali-G85-Build
 on: [push]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
-
+      - uses: actions/checkout@v4
       - name: Install Tools
         run: |
           sudo apt-get update
           sudo apt-get install -y meson mingw-w64 g++-mingw-w64-x86-64 glslang-tools
-
-      - name: Build Mali Driver
+      - name: Build
         run: |
-          meson setup --cross-file build-win64.txt --buildtype release --prefix /tmp/mali_out build.mali
+          meson setup --cross-file build-win64.txt --buildtype release --prefix /tmp/out build.mali
           ninja -C build.mali install
-
-      - name: Upload DLLs
+      - name: Upload
         uses: actions/upload-artifact@v4
         with:
-          name: dxvk-mali-final
-          path: /tmp/mali_out/bin/*.dll
+          name: dxvk-mali-dlls
+          path: /tmp/out/bin/*.dll
