--- a/.github/workflows/mali_build.yml
+++ b/.github/workflows/mali_build.yml
@@ -6,14 +6,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - name: Install Tools
         run: |
           sudo apt-get update
-          sudo apt-get install -y meson mingw-w64 g++-mingw-w64-x86-64 glslang-tools
+          sudo apt-get install -y meson mingw-w64 g++-mingw-w64-x86-64 glslang-tools vulkan-headers
+
       - name: Build
         run: |
+          # This specifically builds the 64-bit DLLs for your Helio G85
           meson setup --cross-file build-win64.txt --buildtype release --prefix /tmp/out build.mali
           ninja -C build.mali install
+
       - name: Upload
         uses: actions/upload-artifact@v4
         with:
