--- a/.github/workflows/mali_build.yml
+++ b/.github/workflows/mali_build.yml
@@ -14,14 +14,13 @@ jobs:
 
       - name: Build
         run: |
-          # We use --wrap-mode=nodownload to force it to use internal headers
-          # And we point it to the cross-file which handles the paths
+          # We removed the "tests" option that caused the error
+          # We use --wrap-mode to ensure it uses the headers included in the code
           meson setup build.mali \
             --cross-file build-win64.txt \
             --buildtype release \
             --prefix /tmp/out \
-            -Dstrip=true \
-            -Dtests=false
+            --wrap-mode=nodownload
           
           ninja -C build.mali install
 
