--- a/.github/workflows/mali_build.yml
+++ b/.github/workflows/mali_build.yml
@@ -1,4 +1,4 @@
-name: DXVK-Mali-Dual-Build
+name: DXVK-Mali-WCP-Build
 on:
   push:
     branches: [main]
@@ -10,40 +10,41 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Build Custom Mali 1.11.0
+      - name: Install Compilers & Compression
         run: |
           sudo apt-get update
-          sudo apt-get install -y g++-mingw-w64-x86-64 patch
-          
-          # Apply GPL-Async Patch
+          sudo apt-get install -y g++-mingw-w64-x86-64 patch zstd xz-utils
+
+      - name: Build Custom Mali 1.11.0
+        run: |
+          # 1. APPLY PATCHES
           curl -L https://gitlab.com/Ph42oN/dxvk-gplasync/-/raw/master/patches/dxvk-gplasync-2.7.1.patch -o gpl.patch
           patch -p1 < gpl.patch || echo "Patch applied"
 
-          # Performance & GPL/Async Flags (Mali-G52 specific)
-          FLAGS="-O3 -flto -ffast-math -shared -static -static-libgcc -static-libstdc++ -w \
-                 -DROMULUS_CLIP_DISTANCE=0 -DXVK_GPL_ASYNC=1"
-          INCLUDES="-I./include -I./include/vulkan -I./src/dxgi -I./src/d3d11 -I./src/d3d9 -I./src/d3d8 -I./src/util -I./src/dxvk -I./src/common -I./src/vulkan"
-          
-          mkdir -p ./ultimate_pack/"Dxvk mali 1.11.0"
-          
-          # Find all necessary source files
-          CORE=$(find ./src/util ./src/vulkan ./src/common -name "*.cpp")
-          DXVK=$(find ./src/dxvk -name "*.cpp")
+          # 2. COMPILE (Minimalist Performance Flags)
+          FLAGS="-O3 -flto -ffast-math -shared -static -static-libgcc -static-libstdc++ -w -DROMULUS_CLIP_DISTANCE=0 -DXVK_GPL_ASYNC=1"
+          INCLUDES="-I./include -I./include/vulkan -I./src/dxgi -I./src/d3d11 -I./src/d3d10 -I./src/d3d9 -I./src/d3d8 -I./src/util -I./src/dxvk -I./src/vulkan"
+          CORE_FILES=$(find ./src/util ./src/vulkan ./src/dxvk -maxdepth 2 -name "*.cpp" 2>/dev/null)
 
-          # Compile 1.11.0 DLLs
-          x86_64-w64-mingw32-g++ $FLAGS $INCLUDES -o ./ultimate_pack/"Dxvk mali 1.11.0"/d3d11.dll ./src/d3d11/d3d11_main.cpp $DXVK $CORE
-          x86_64-w64-mingw32-g++ $FLAGS $INCLUDES -o ./ultimate_pack/"Dxvk mali 1.11.0"/d3d9.dll ./src/d3d9/d3d9_main.cpp $CORE
-          x86_64-w64-mingw32-g++ $FLAGS $INCLUDES -o ./ultimate_pack/"Dxvk mali 1.11.0"/dxgi.dll ./src/dxgi/dxgi_main.cpp $CORE
+          # 3. CREATE DIRECTORY STRUCTURE FOR .WCP
+          # Winlator Content Packages expect an internal structure (usually x64/x86)
+          mkdir -p ./wcp_staging/x64
+          
+          x86_64-w64-mingw32-g++ $FLAGS $INCLUDES -o ./wcp_staging/x64/d3d11.dll ./src/d3d11/*.cpp $CORE_FILES
+          x86_64-w64-mingw32-g++ $FLAGS $INCLUDES -o ./wcp_staging/x64/d3d10core.dll ./src/d3d10/*.cpp $CORE_FILES
+          x86_64-w64-mingw32-g++ $FLAGS $INCLUDES -o ./wcp_staging/x64/d3d9.dll ./src/d3d9/*.cpp $CORE_FILES
+          x86_64-w64-mingw32-g++ $FLAGS $INCLUDES -o ./wcp_staging/x64/d3d8.dll ./src/d3d8/*.cpp $CORE_FILES
+          x86_64-w64-mingw32-g++ $FLAGS $INCLUDES -o ./wcp_staging/x64/dxgi.dll ./src/dxgi/*.cpp $CORE_FILES
 
-      - name: Prepare Legacy 1.10.3 Async
+      - name: Create .wcp Package (ZST Compression)
         run: |
-          mkdir -p ./ultimate_pack/"1.10.3"
-          curl -L https://github.com/Sporif/dxvk-async/releases/download/1.10.3/dxvk-async-1.10.3.tar.gz -o 1103.tar.gz
-          tar -xf 1103.tar.gz
-          cp dxvk-async-1.10.3/x64/*.dll ./ultimate_pack/"1.10.3"/
+          # Packaging the content into the .wcp format using Zstandard compression
+          cd wcp_staging
+          tar -I zstd -cf ../DXVK_Mali_1.11.0_GPL.wcp ./*
+          cd ..
 
-      - name: Upload Artifacts
+      - name: Upload WCP Content
         uses: actions/upload-artifact@v4
         with:
-          name: DXVK-Mali-Universal-Package
-          path: ./ultimate_pack/
+          name: Winlator-Content-Package
+          path: ./*.wcp
