--- a/.github/workflows/mali_build.yml
+++ b/.github/workflows/mali_build.yml
@@ -1,4 +1,4 @@
-name: Universal-Mali-Default-Compiler-Build
+name: Universal-Mali-Final-Fix
 on:
   push:
     branches: [main]
@@ -10,59 +10,56 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      # --- NEW COMPILER SETUP (From your save) ---
+      # 1. INSTALL TOOLCHAIN (Your successful setup)
       - name: Install Toolchain
         run: |
           sudo apt-get update
           sudo apt-get install -y g++-mingw-w64-x86-64 patch zstd libvulkan-dev
-          
-          # Force POSIX threading (Critical for DXVK C++11/mutex support)
           sudo update-alternatives --set x86_64-w64-mingw32-gcc /usr/bin/x86_64-w64-mingw32-gcc-posix
           sudo update-alternatives --set x86_64-w64-mingw32-g++ /usr/bin/x86_64-w64-mingw32-g++-posix
-          
-          echo "VERIFIED COMPILER:"
-          x86_64-w64-mingw32-g++ --version
 
-      # --- SAVE 1 PROJECT PREP ---
+      # 2. PREPARE SOURCE
       - name: Prepare Source & Patch
         run: |
-          # Manual header injection to prevent dxvk_version.h errors
           mkdir -p ./src/dxvk
           echo '#define DXVK_VERSION "1.11.0-Mali-Universal"' > ./src/dxvk/dxvk_version.h
-
-          # Apply Ph42oN's GPL-Async Patch (Performance core)
           curl -L https://gitlab.com/Ph42oN/dxvk-gplasync/-/raw/master/patches/dxvk-gplasync-2.7.1.patch -o gpl.patch
           patch -p1 < gpl.patch || echo "Patch applied"
 
-      # --- SAVE 1 COMPILATION LOGIC (Using New Compiler) ---
+      # 3. COMPILE (Fixed Loop Logic)
       - name: Compile Optimized DLLs
         run: |
           mkdir -p ./build_output/x64
-          
-          # Optimization Flags from Save 1
           FLAGS="-O3 -march=x86-64 -ffast-math -shared -static -static-libgcc -static-libstdc++ -w"
           OPTS="-DXVK_GPL_ASYNC=1 -DROMULUS_CLIP_DISTANCE=0"
           
-          # Recursive folder search (The "Success Logic")
+          # Recursive Header Search
           ALL_PATHS=$(find ./src -type d | sed 's/^/-I /' | tr '\n' ' ')
           INCLUDES="-I/usr/include -I./include -I./include/vulkan $ALL_PATHS"
           
-          # Core engine files discovery
+          # Find core engine logic (utility files)
           CORE_ENGINE=$(find ./src/util ./src/vulkan ./src/dxvk -name "*.cpp")
 
-          # Loop through and build DLLs using the verified toolchain
+          # FIXED LOOP: Only compiles if files exist
           for dll in dxgi d3d11 d3d10core d3d9 d3d8; do
             if [ -d "./src/$dll" ]; then
-              echo "Building: $dll.dll"
-              x86_64-w64-mingw32-g++ $FLAGS $OPTS $INCLUDES -o ./build_output/x64/$dll.dll $(find ./src/$dll -name "*.cpp") $CORE_ENGINE
+              echo "Searching for source files in: ./src/$dll"
+              DLL_SOURCES=$(find ./src/$dll -name "*.cpp")
+              
+              if [ -n "$DLL_SOURCES" ]; then
+                echo "Compiling $dll.dll..."
+                x86_64-w64-mingw32-g++ $FLAGS $OPTS $INCLUDES -o ./build_output/x64/$dll.dll $DLL_SOURCES $CORE_ENGINE
+              else
+                echo "Warning: No .cpp files found in ./src/$dll, skipping."
+              fi
             fi
           done
 
-      # --- PACKAGING ---
+      # 4. PACKAGE
       - name: Create WCP Package
         run: |
-          echo '{"name":"DXVK Mali GPL-Async","version":"1.11.0","author":"Disco-sys","description":"Universal Mali build using Default Toolchain.","type":"DXVK"}' > ./build_output/profile.json
-          cd build_output && tar -I zstd -cf ../DXVK-Mali-Combined.wcp ./*
+          echo '{"name":"DXVK Mali Combined","version":"1.11.0","author":"Disco-sys","type":"DXVK"}' > ./build_output/profile.json
+          cd build_output && tar -I zstd -cf ../DXVK-Mali-Final.wcp ./*
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
