--- a/.github/workflows/mali_build.yml
+++ b/.github/workflows/mali_build.yml
@@ -1,68 +1,35 @@
-name: Universal-Mali-Final-Fix
-on:
-  push:
-    branches: [main]
-  workflow_dispatch:
+name: Artifacts (Package)
+
+on: [push, pull_request, workflow_dispatch]
 
 jobs:
-  build:
+  artifacts-mingw-w64:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
+    - name: Checkout code
+      id: checkout-code
+      uses: actions/checkout@v4
+      with:
+        submodules: recursive
+        fetch-depth: 0
 
-      # 1. INSTALL TOOLCHAIN (Your successful setup)
-      - name: Install Toolchain
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y g++-mingw-w64-x86-64 patch zstd libvulkan-dev
-          sudo update-alternatives --set x86_64-w64-mingw32-gcc /usr/bin/x86_64-w64-mingw32-gcc-posix
-          sudo update-alternatives --set x86_64-w64-mingw32-g++ /usr/bin/x86_64-w64-mingw32-g++-posix
+    - name: Setup problem matcher
+      uses: Joshua-Ashton/gcc-problem-matcher@v3
 
-      # 2. PREPARE SOURCE
-      - name: Prepare Source & Patch
-        run: |
-          mkdir -p ./src/dxvk
-          echo '#define DXVK_VERSION "1.11.0-Mali-Universal"' > ./src/dxvk/dxvk_version.h
-          curl -L https://gitlab.com/Ph42oN/dxvk-gplasync/-/raw/master/patches/dxvk-gplasync-2.7.1.patch -o gpl.patch
-          patch -p1 < gpl.patch || echo "Patch applied"
+    - name: Build release
+      id: build-release
+      uses: Joshua-Ashton/arch-mingw-github-action@v8
+      with:
+        command: |
+          export VERSION_NAME="${GITHUB_REF##*/}-${GITHUB_SHA##*/}"
+          ./package-release.sh ${VERSION_NAME} build --no-package
+          echo "VERSION_NAME=${VERSION_NAME}" >> $GITHUB_ENV
 
-      # 3. COMPILE (Fixed Loop Logic)
-      - name: Compile Optimized DLLs
-        run: |
-          mkdir -p ./build_output/x64
-          FLAGS="-O3 -march=x86-64 -ffast-math -shared -static -static-libgcc -static-libstdc++ -w"
-          OPTS="-DXVK_GPL_ASYNC=1 -DROMULUS_CLIP_DISTANCE=0"
-          
-          # Recursive Header Search
-          ALL_PATHS=$(find ./src -type d | sed 's/^/-I /' | tr '\n' ' ')
-          INCLUDES="-I/usr/include -I./include -I./include/vulkan $ALL_PATHS"
-          
-          # Find core engine logic (utility files)
-          CORE_ENGINE=$(find ./src/util ./src/vulkan ./src/dxvk -name "*.cpp")
-
-          # FIXED LOOP: Only compiles if files exist
-          for dll in dxgi d3d11 d3d10core d3d9 d3d8; do
-            if [ -d "./src/$dll" ]; then
-              echo "Searching for source files in: ./src/$dll"
-              DLL_SOURCES=$(find ./src/$dll -name "*.cpp")
-              
-              if [ -n "$DLL_SOURCES" ]; then
-                echo "Compiling $dll.dll..."
-                x86_64-w64-mingw32-g++ $FLAGS $OPTS $INCLUDES -o ./build_output/x64/$dll.dll $DLL_SOURCES $CORE_ENGINE
-              else
-                echo "Warning: No .cpp files found in ./src/$dll, skipping."
-              fi
-            fi
-          done
-
-      # 4. PACKAGE
-      - name: Create WCP Package
-        run: |
-          echo '{"name":"DXVK Mali Combined","version":"1.11.0","author":"Disco-sys","type":"DXVK"}' > ./build_output/profile.json
-          cd build_output && tar -I zstd -cf ../DXVK-Mali-Final.wcp ./*
-
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: Mali-Combined-Pack
-          path: ./*.wcp
+    - name: Upload artifacts
+      id: upload-artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: dxvk-sarek-${{ env.VERSION_NAME }}
+        path: build/dxvk-${{ env.VERSION_NAME }}
+        if-no-files-found: error
