--- a/.github/workflows/mali_build.yml
+++ b/.github/workflows/mali_build.yml
@@ -1,41 +1,35 @@
-name: Build and Upload
-
-on: [push, pull_request, workflow_dispatch]
-
-jobs:
-  mali-build:
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v4
-      with:
-        submodules: recursive
-
-    - name: Compiler (LLVM-Clang Only)
+    - name: Compiler (LLVM-Clang Full Patch)
       uses: Joshua-Ashton/arch-mingw-github-action@v8
       with:
         command: |
-          # 1. Install the base MinGW toolchain and standard Clang
-          # On Arch, 'clang' can target anything if you give it the right 'triple'
+          # 1. Install Toolchain
           sudo pacman -S --noconfirm mingw-w64-gcc clang lld
 
           # 2. Fix Mandatory Headers
           cp -r include/vulkan /usr/x86_64-w64-mingw32/include/
           cp -r include/spirv /usr/x86_64-w64-mingw32/include/
 
-          # 3. Patch Variables (Required for Mali source)
+          # 3. COMPREHENSIVE MALI PATCH (Fixes d3d8, d3d9, d3d10, d3d11, dxgi)
           cat <<EOF > mali_patch.txt
+          # Resource compiler for Windows
           wrc_generator = generator(find_program('x86_64-w64-mingw32-windres'), output: '@BASENAME@.res', arguments: [ '@INPUT@', '@OUTPUT@' ])
+          
+          # File extensions
           dll_ext = '.dll'
           def_spec_ext = '.def'
+          
+          # Library Dependencies (Fixes the "Unknown variable" errors)
           lib_dxgi = declare_dependency(link_args: ['-ldxgi'])
+          lib_d3d9 = declare_dependency(link_args: ['-ld3d9'])
+          lib_d3d10 = declare_dependency(link_args: ['-ld3d10'])
+          lib_d3d10core = declare_dependency(link_args: ['-ld3d10core'])
           lib_d3d11 = declare_dependency(link_args: ['-ld3d11'])
           EOF
+          
+          # Inject the variables into the top of the main meson.build
           sed -i '1r mali_patch.txt' meson.build
           
-          # 4. Force LLVM/Clang to target Windows x64
-          # We use the 'target' flag so Clang behaves like a MinGW compiler
+          # 4. Use LLVM Compiler
           export CC="clang --target=x86_64-w64-mingw32"
           export CXX="clang++ --target=x86_64-w64-mingw32"
           export LDFLAGS="-fuse-ld=lld"
@@ -44,9 +38,3 @@ jobs:
           mkdir -p ./src/dxvk && echo '#define DXVK_VERSION "Mali-LLVM-Pro"' > ./src/dxvk/dxvk_version.h
           chmod +x package-release.sh
           ./package-release.sh master build --no-package
-
-    - name: Artifacts
-      uses: actions/upload-artifact@v4
-      with:
-        name: dxvk-mali-pro-llvm
-        path: build/dxvk-master
