--- a/.github/workflows/mali_build.yml
+++ b/.github/workflows/mali_build.yml
@@ -1,4 +1,4 @@
-    - name: Compiler (LLVM-Clang Final)
+name: Compiler (LLVM-Clang Final)
       uses: Joshua-Ashton/arch-mingw-github-action@v8
       with:
         command: |
